<resources>
    <string name="app_name">MobiGuide - мобильный тур-гид</string>
    <string name="button_ancient">Древние</string>
    <string name="button_modern">Современные</string>
    <string name="button_nature">Природные</string>
    <string name="picture">Картинка</string>
    <string name="description">Описание</string>
    <string name="creation_date">Дата создания</string>
    <string name="destruction_date">Дата разрушения</string>
    <string name="location">Местоположение</string>
    <string name="startSpeech">Озвучить текст</string>
    <string name="pauseSpeech">Пазуа</string>
    <string name="stopSpeech">Стоп</string>
</resources>