<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_ancient_home"
            android:text="@string/button_ancient"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="@dimen/spacing_8dp"
            android:layout_marginBottom="@dimen/spacing_8dp"
            android:layout_marginStart="@dimen/spacing_8dp"
            style="?android:attr/buttonStyle"
            android:background="@drawable/button_left_border"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_modern_home"
            android:text="@string/button_modern"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="@dimen/spacing_8dp"
            android:layout_marginBottom="@dimen/spacing_8dp"
            style="?android:attr/buttonStyle"
            android:background="@drawable/button_center_border"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_nature_home"
            android:text="@string/button_nature"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="@dimen/spacing_8dp"
            android:layout_marginBottom="@dimen/spacing_8dp"
            android:layout_marginEnd="@dimen/spacing_8dp"
            style="?android:attr/buttonStyle"
            android:background="@drawable/button_right_border"
            android:layout_weight="1"/>

    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/home_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>