<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_layout_preview_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkTransparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/left_card_border"
        android:layout_marginStart="@dimen/spacing_16dp"
        android:layout_marginTop="@dimen/spacing_32dp"
        android:layout_marginBottom="@dimen/spacing_32dp">

        <ImageView
            android:id="@+id/thumbnail_preview_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/spacing_8dp"
            android:contentDescription="@string/picture"
            app:layout_constraintBottom_toTopOf="@+id/name_preview_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_preview_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_4dp"
            style="@style/TextAppearance.AppCompat.LargeTitle"
            app:layout_constraintBottom_toTopOf="@+id/location_preview_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thumbnail_preview_1"
            tools:text="name" />

        <TextView
            android:id="@+id/location_preview_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_4dp"
            style="@style/TextAppearance.AppCompat.MediumSubtext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_preview_1"
            tools:text="location" />


        <TextView
            android:id="@+id/creation_date_text_preview_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_4dp"
            android:maxWidth="150dp"
            android:text="@string/creation_date"
            style="@style/TextAppearance.AppCompat.SmallSubtext"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/creation_date_preview_1"
            app:layout_constraintEnd_toStartOf="@+id/destruction_date_text_preview_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_preview_1" />

        <TextView
            android:id="@+id/creation_date_preview_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="150dp"
            style="@style/TextAppearance.AppCompat.SmallSubtext"
            app:layout_constraintEnd_toStartOf="@+id/destruction_date_preview_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creation_date_text_preview_1"
            tools:text="2000" />

        <TextView
            android:id="@+id/destruction_date_text_preview_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_4dp"
            android:maxWidth="150dp"
            android:text="@string/destruction_date"
            style="@style/TextAppearance.AppCompat.SmallSubtext"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/destruction_date_preview_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/creation_date_text_preview_1"
            app:layout_constraintTop_toBottomOf="@+id/location_preview_1" />

        <TextView
            android:id="@+id/destruction_date_preview_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="150dp"
            style="@style/TextAppearance.AppCompat.SmallSubtext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/creation_date_preview_1"
            app:layout_constraintTop_toBottomOf="@+id/destruction_date_text_preview_1"
            tools:text="2000" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>